--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     title Web app
+    link(rel="stylesheet" type="text/css" href="styles/style.css")
   body
     h1 Jade - node template engine
     #container.col
