--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -14,4 +14,4 @@ html(lang="en")
     script(src="jspm_packages/system.js")
     script(src="config.js")
     script.
-      System.import('scripts/index');
+      System.import('index');
