--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     title Web app
+    link(rel="stylesheet" type="text/css" href="github/twbs/bootstrap@4.0.0-alpha/css/bootstrap.min.css")
     link(rel="stylesheet" type="text/css" href="style.css")
   body
     h1 Jade - node template engine
@@ -11,7 +12,7 @@ html(lang="en")
         templating language with a
         strong focus on performance
         and powerful features.
-    script(src="jspm_packages/system.js")
+    script(src="system.js")
     script(src="config.js")
     script.
       System.import('index');
