add layout and navigation and footer to jade files

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -1,18 +1,4 @@
-doctype html
-html(lang="en")
-  head
-    title Web app
-    link(rel="stylesheet" type="text/css" href="github/twbs/bootstrap@4.0.0-alpha/css/bootstrap.min.css")
-    link(rel="stylesheet" type="text/css" href="style.css")
-  body
-    h1 Jade - node template engine
-    #container.col
-      p.
-        Jade is a terse and simple
-        templating language with a
-        strong focus on performance
-        and powerful features.
-    script(src="system.js")
-    script(src="config.js")
-    script.
-      System.import('index');
+extends includes/layout.jade
+
+block content
+  h1 Posaklivko
