set year dynamic to footer

--- a/public/views/includes/footer.jade
+++ b/public/views/includes/footer.jade
@@ -1,3 +1,4 @@
 footer.footer
   div.container
-    p Posaklivko web application 2016
+    - var year = new Date().getFullYear();
+    p Posaklivko web application #{year}
