return to boostrap 3.3.6

--- a/public/views/includes/footer.jade
+++ b/public/views/includes/footer.jade
@@ -1,4 +1,4 @@
 footer.footer
   div.container
     - var year = new Date().getFullYear();
-    p Posaklivko web application #{year}
+    p.text-muted.text-center Posaklivko web application #{year}
