--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -1,4 +1,10 @@
 extends includes/layout.jade
 
 block content
-  h1 Posaklivko
+  div.jumbotron
+    h1.display-2 Hello, Posaklivko!
+    p Posaklivko helps you to build web applications with NodeJS using ECMAScript 2015.
+    hr.m-y-2
+    p
+      a.btn.btn-primary.btn-lg(href="/about" role="button") Learn more
+    
