--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,7 +1,7 @@
-/*body {
-  background-color: #8bc900;
-  p {
-    color: #333;
-    font-weight: bold;
-  }
-}*/
+.footer {
+    background-color: #e7e7e7;
+
+    .text-muted {
+      margin: 20px 0;
+    }
+}
