--- a/public/views/includes/nav.jade
+++ b/public/views/includes/nav.jade
@@ -1,10 +1,17 @@
-nav.navbar.navbar-light.bg-faded
+nav.navbar.navbar-default
   div.container
-    a.navbar-brand(href="#") Posaklivko
-    ul.nav.navbar-nav
-      li.nav-item.active
-        a.nav-link(href="#") Home
-      li.nav-item
-        a.nav-link(href="#") About
-      li.nav-item
-        a.nav-link(href="#") Contact
+    div.navbar-header
+      button.navbar-toggle.collapsed(data-toggle="collapse" data-target="#posaklivko-navbar" aria-expanded="false")
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand(href="/") Posaklivko
+    div.collapse.navbar-collapse(id="posaklivko-navbar")
+      ul.nav.navbar-nav
+        li
+          a(href="/") Home
+        li
+          a(href="/about") About
+        li
+          a(href="/contact") Contact
