Contact page added

--- a/public/views/about.jade
+++ b/public/views/about.jade
@@ -6,7 +6,7 @@ block content
   div.panel.panel-default
     div.panel-body
       p 
-        b Posaklivko 
+        strong Posaklivko 
         | is basic project struture with basic configurations that helps developers to build beautiful and modern web applications with NodeJS using ECMAScript 2015.
       h3 Table of contents
       ul
