block title added to jade files where needed

--- a/public/views/includes/layout.jade
+++ b/public/views/includes/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
   head
-    title Posaklivko
+    block title
     link(rel="stylesheet" type="text/css" href="github/twbs/bootstrap@3.3.6/css/bootstrap.min.css")
     link(rel="stylesheet" type="text/css" href="style.css")
   body
