--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -1,5 +1,8 @@
 extends includes/layout.jade
 
+block title
+  title Posaklivko
+
 block content
   div.jumbotron
     h1.display-2 Hello, Posaklivko!
