about page changes

--- a/public/views/about.jade
+++ b/public/views/about.jade
@@ -53,6 +53,7 @@ block content
             li index.js - starting point of the application
         li .babelrc - babel configurations
         li .gitignore - contains all ignored git files
-        li .jshintrc - jshint configurations
+        li .eslintrc - eslint configurations
         li gulpfile.babel.js - load all gulp tasks
+        li package.json - identifies the project as well as handle the project's dependencies
       
