--- a/public/views/about.jade
+++ b/public/views/about.jade
@@ -10,7 +10,7 @@ block content
     div.panel-body
       p 
         strong Posaklivko 
-        | is basic project struture with basic configurations that helps developers to build beautiful and modern web applications with NodeJS using ECMAScript 2015.
+        | is basic project structure with basic configurations that helps developers to build beautiful and modern web applications with NodeJS using ECMAScript 2015.
       h3 Table of contents
       ul
         li 
