--- a/public/views/home/about.jade
+++ b/public/views/home/about.jade
@@ -8,24 +8,24 @@ block content
     h1 What is Posaklivko?
   div.panel.panel-default
     div.panel-body
-      p 
-        strong Posaklivko 
+      p
+        strong Posaklivko
         | is basic project structure with basic configurations that helps developers to build beautiful and modern web applications with NodeJS using ECMAScript 2015.
       h3 Table of contents
       ul
-        li 
+        li
           a(href="#build-system") Build System
-        li 
+        li
           a(href="#package-manager") Package Manager
-        li 
+        li
           a(href="#folder-structure") Folder Structure
       h3 Build System
-      p The Build System is used to build your project. The Build System that is used is Gulp. It allows you to do a lot of stuff within your development workflow. For more information visit  
-        a(href="http://gulpjs.com/" target="_blank") Gulp
+      p The Build System is used to build your project. The Build System that is used is Gulp. It allows you to do a lot of stuff within your development workflow. For more information visit
+        a(href="http://gulpjs.com/" target="_blank") &nbsp;Gulp
       h3 Package Manager
-      p The Package Manager is used for dependency management, which helps no longer have to manually download and manage your scripts. In Posaklivko are used 
-        a(href="http://jspm.io/" target="_blank") jspm 
-        | and 
+      p The Package Manager is used for dependency management, which helps no longer have to manually download and manage your scripts. In Posaklivko are used
+        a(href="http://jspm.io/" target="_blank") &nbsp;jspm
+        | &nbsp;and&nbsp;
         a(href="https://www.npmjs.com/" target="_blank") npm.
       h3 Folder Structure
       ul
@@ -56,4 +56,3 @@ block content
         li .eslintrc - eslint configurations
         li gulpfile.babel.js - load all gulp tasks
         li package.json - identifies the project as well as handle the project's dependencies
-      
