--- a/public/views/home/contact.jade
+++ b/public/views/home/contact.jade
@@ -12,13 +12,16 @@ block content
         div.alert.alert-success
           span Thank you, #{name}
       div.col-md-6
-        form(action="/contact" method="POST")
+        form(action="/contact" method="POST" enctype="multipart/form-data")
           div.form-group
             label(for="name") Name
             input#name.form-control(type="text" name="name" placeholder="Your name")
           div.form-group
             label(for="email") Email
             input#email.form-control(type="email" name="email" placeholder="Your email")
+          div.form-group
+            label(for="files") Files
+            input#files.form-control(type="file" name="files" placeholder="Your file" multiple)
           div.form-group
             label(for="message") Message
             textarea#message.form-control(name="message")
